# contextOntologenius

./: CMakeLists.txt  README.md  package.xml  reasoners_plugins.xml
configs/: ontologenius_config.yaml
include/context-package/: ReasonerContext.h
launch/: context.launch
ontologies/: Context.owl  catalog-v001.xml
scripts/: scenario.py
src/: ReasonerContext.cpp
